Basic styles for plugin

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Streamlit Core v1.0",
+  "name": "st.command_generator",
   "id": "1143622264502622674",
   "api": "1.0.0",
   "main": "code.js",
