--- a/package.json
+++ b/package.json
@@ -1,16 +1,37 @@
 {
-  "name": "Streamlit-Core-v10",
+  "name": "st-command-generator",
   "version": "1.0.0",
-  "description": "Your Figma Plugin",
-  "main": "code.js",
+  "description": "A plugin to generate st. commands with their corresponding parameters, based on the components from our existing Figma library",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "watch": "npm run build -- --watch"
+    "test": "npm run tsc && npm run build",
+    "format": "prettier --write .",
+    "tsc": "npm run tsc:main && npm run tsc:ui",
+    "tsc:main": "tsc --noEmit -p src/plugin",
+    "tsc:ui": "tsc --noEmit -p src/ui",
+    "tsc:watch": "concurrently -n widget,iframe \"npm run tsc:main -- --watch --preserveWatchOutput\" \"npm run tsc:ui -- --watch --preserveWatchOutput\"",
+    "build": "npm run build:ui && npm run build:main -- --minify",
+    "build:main": "esbuild src/plugin/code.ts --bundle --outfile=dist/code.js",
+    "build:ui": "npx vite build --minify esbuild --emptyOutDir=false",
+    "build:watch": "concurrently -n widget,iframe \"npm run build:main -- --watch\" \"npm run build:ui -- --watch\"",
+    "dev": "concurrently -n tsc,build 'npm:tsc:watch' 'npm:build:watch'"
   },
   "author": "",
   "license": "",
   "devDependencies": {
     "@figma/plugin-typings": "^1.50.0",
-    "typescript": "*"
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "typescript": "*",
+    "vite": "^3.0.9",
+    "vite-plugin-singlefile": "^0.11.1",
+    "vite-svg-loader": "^3.4.0"
+  },
+  "dependencies": {
+    "concurrently": "^7.3.0",
+    "esbuild": "^0.15.5",
+    "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
