--- a/src/plugin/tsconfig.json
+++ b/src/plugin/tsconfig.json
@@ -3,9 +3,6 @@
     "target": "es2017",
     "lib": ["es2017"],
     "strict": true,
-    "typeRoots": [
-      "./node_modules/@types",
-      "./node_modules/@figma"
-    ]
+    "typeRoots": ["../../node_modules/@figma"]
   }
 }
