--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "esbuild": "^0.15.5",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rgb-hex": "^4.0.0"
   }
 }
