--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "tailwindcss": "^3.1.8",
     "typescript": "*",
     "vite": "^3.0.9",
     "vite-plugin-singlefile": "^0.11.1",
     "vite-svg-loader": "^3.4.0"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.9",
     "concurrently": "^7.3.0",
     "esbuild": "^0.15.5",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rgb-hex": "^4.0.0"
