--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vite-svg-loader": "^3.4.0"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10.4.9",
     "concurrently": "^7.3.0",
     "esbuild": "^0.15.5",
