--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "st.command_generator",
+  "name": "figma_to_streamlit",
   "id": "1143622264502622674",
   "api": "1.0.0",
   "main": "dist/code.js",
